--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
         <title>Shop | TRION</title>
         <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
-    <body>
+    <body id="shop">
         <header>
             <nav class="row">
                 <a class="navlogo img" href="index.html" aria-label="company logo"><h1>TRION</h1></a>
@@ -54,7 +54,23 @@
             </nav>
         </header>
         <main>
-           <section class="shop-container"></section>
+           <section class="shop-container">
+            <ul class="shop-nav-1">
+                <li><button type="button" class="tab no-button">All</button></li>
+                <li><button type="button" class="tab no-button">Male</button></li>
+                <li><button type="button" class="tab no-button">Female</button></li>
+                <li><button type="button" class="tab no-button">Lifestyle</button></li>
+            </ul>
+            <ul class="shop-nav-2">
+                <li><button type="button" class="tab no-button">All</button></li>
+                <li><button type="button" class="tab no-button">Jackets</button></li>
+                <li><button type="button" class="tab no-button">Casual</button></li>
+                <li><button type="button" class="tab no-button">Hats</button></li>
+            </ul>
+            <div class="shop-content">
+
+            </div>
+           </section>
         </main>
         <footer>
             <div>
