shop nav population

--- a/shop.html
+++ b/shop.html
@@ -58,20 +58,16 @@
                <nav class="shop-nav-1 row">
                 <button type="button" class="img button-left scroll-arrow hidden"></button>
                 <ul class="content row">
-                    <li class="tab"><button type="button" class="no-button">All</button></li>
-                    <li class="tab"><button type="button" class="no-button">Male</button></li>
-                    <li class="tab"><button type="button" class="no-button">Female</button></li>
-                    <li class="tab"><button type="button" class="no-button">Lifestyle</button></li>
+                    <li class="tab"><button type="button" class="no-button" value="all">All</button></li>
+                    <li class="tab"><button type="button" class="no-button" value="male">Male</button></li>
+                    <li class="tab"><button type="button" class="no-button" value="female">Female</button></li>
+                    <li class="tab"><button type="button" class="no-button" value="lifestyle">Lifestyle</button></li>
                 </ul>
                 <button type="button" class="img button-right scroll-arrow hidden"></button>
             </nav>
             <nav class="shop-nav-2 row">
                 <button type="button" class="img button-up scroll-arrow hidden"></button>
                 <ul class="content row">
-                    <li class="tab"><button type="button" class="no-button">All</button></li>
-                    <li class="tab"><button type="button" class="no-button">Jackets</button></li>
-                    <li class="tab"><button type="button" class="no-button">Casual</button></li>
-                    <li class="tab"><button type="button" class="no-button">Hats</button></li>
                 </ul>
                 <button type="button" class="img button-down scroll-arrow hidden"></button>
             </nav>
@@ -141,7 +137,7 @@
                     <p>© 2024-2025, Trion Supercars</p>
                 </div>
         </footer>
-        <script src="script.js"></script>
-        <script src="shop.js"></script>
+        <script type="module" src="script.js"></script>
+        <script type="module" src="shop.js"></script>
     </body>
 </html>
