--- a/shop.html
+++ b/shop.html
@@ -58,7 +58,7 @@
                <nav class="shop-nav-1 row">
                 <button type="button" class="img button-left scroll-arrow hidden"></button>
                 <ul class="content row">
-                    <li class="tab"><button type="button" class="no-button" value="all">All</button></li>
+                    <li class="tab active"><button type="button" class="no-button" value="all">All</button></li>
                     <li class="tab"><button type="button" class="no-button" value="male">Male</button></li>
                     <li class="tab"><button type="button" class="no-button" value="female">Female</button></li>
                     <li class="tab"><button type="button" class="no-button" value="lifestyle">Lifestyle</button></li>
@@ -68,11 +68,12 @@
             <nav class="shop-nav-2 row">
                 <button type="button" class="img button-up scroll-arrow hidden"></button>
                 <ul class="content row">
+                    <!--Generated nav-->
                 </ul>
                 <button type="button" class="img button-down scroll-arrow hidden"></button>
             </nav>
             <div class="shop-content">
-
+                <!--Generated content-->
             </div>
            </section>
         </main>
